@@ -19,6 +19,7 @@ pvfs2-1.1.0pre1
 - gossip: avoid double-timestamp in debug and error messages
 - feature-test for kernel routines i_size_write, i_size_read, and parent_ino
 - recover better from server failures
+- kernel: export superblock magic number for romio autodetection
 
 
 pvfs2-1.0.1
